# phyai

./: .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: phyai-publish-nightly.yml
benchmark/: bench_n_batch_ws1_pi0.py
benchmark/cosmos3_policy/: .gitignore  model_flops_cosmos3.py  plot_cosmos3_policy.py  profile_cosmos3_policy.py  run.sh
benchmark/pi0/: bench_realtime_vla_pi0.py  compare_pi0_lerobot_live.py  profile_pi0.py
benchmark/pi05/: .gitignore  README_external_pi05_benchmarks.md  README_external_runtime_latency.md  bench_flashrt_pi05.py  bench_realtime_vla_pi05.py  (+6 more)
docs/: docs.json  phyai_pi05_libero_four_suites_reproduction.md
examples/: run_walloss05_native_action_processor_check.py  run_walloss05_native_action_processor_parity.py  run_walloss05_native_decoder_model_skeleton_check.py  run_walloss05_native_mrope_parity.py  run_walloss05_native_norm_moe_parity.py  run_walloss05_native_sparse_moe_parity.py
phyai/: pyproject.toml
phyai-ext/: CMakeLists.txt  pyproject.toml
phyai-model-optimizer/: pyproject.toml
phyai-model-optimizer/src/phyai_model_optimizer/: __init__.py  quant_math.py
phyai-utils-tools/: pyproject.toml
phyai-utils-tools/src/phyai_utils_tools/: __init__.py
phyai-utils-tools/src/phyai_utils_tools/models/cosmos3/: __init__.py  processor_cosmos3.py  steps_cosmos3.py
phyai-utils-tools/src/phyai_utils_tools/models/gr00t/: __init__.py  ops_gr00t.py  processor_gr00t.py
phyai-utils-tools/src/phyai_utils_tools/models/pi0/: processor_pi0.py  steps_pi0.py
phyai/src/phyai/: __init__.py  engine.py  engine_config.py  env.py
phyai/src/phyai/layers/attention/ar/: __init__.py
phyai/src/phyai/layers/attention/ar/radix/: __init__.py  planner.py  sequence.py
phyai/src/phyai/layers/attention/attention/: layer.py
phyai/src/phyai/layers/attention/attention/backends/: flashinfer.py
phyai/src/phyai/layers/linear/: layers.py
phyai/src/phyai/layers/linear/backends/: flashinfer.py  humming.py
phyai/src/phyai/layers/quant/: active.py  fp8.py  materialize.py  plan.py  scheme.py
phyai/src/phyai/layers/quant/importers/: __init__.py  base.py  compressed_tensors.py  fp8.py  modelopt.py  registry.py
phyai/src/phyai/models/cosmos3/: __init__.py  configuration_cosmos3.py  main_cosmos3.py  main_cosmos3_policy.py  main_cosmos3_policy_wn.py  main_cosmos3_wn.py  model_runner_cosmos3.py  model_runner_vae_cosmos3.py  modeling_cosmos3.py  scheduler_wn_cosmos3.py  scheduler_wn_cosmos3_policy.py  scheduler_ws1_cosmos3_policy.py  vae_wan.py
phyai/src/phyai/models/gr00t_n17/: __init__.py  configuration_gr00t_n17.py  main_gr00t_n17.py  model_runner_gr00t_n17.py  modeling_gr00t_n17.py  qwen3_vl_adapter.py  qwen3_vl_native.py  scheduler_ws1_gr00t_n17.py
phyai/src/phyai/models/minicpm_gr00t/: __init__.py  configuration_minicpm_gr00t.py  main_minicpm_gr00t.py  model_runner_minicpm_gr00t.py  modeling_minicpm_gr00t.py  scheduler_ws1_minicpm_gr00t.py
phyai/src/phyai/models/pi0/: main_pi0.py  modeling_pi0.py  scheduler_ws1_pi0.py
phyai/src/phyai/models/pi05/: main_pi05.py  main_pi05_wn.py  model_runner_pi05.py  modeling_pi05.py  scheduler_wn_pi05.py  scheduler_ws1_pi05.py
phyai/src/phyai/models/qwen3_5/: __init__.py  configuration_qwen3_5.py  modeling_qwen3_5.py
phyai/src/phyai/models/qwen3_vl/: modeling_qwen3_vl.py
phyai/src/phyai/models/walloss05_native/: __init__.py  configuration_walloss05_native.py  modeling_walloss05_native.py
phyai/src/phyai/parallel/: dist.py  ops.py
phyai/src/phyai/parallel/backends/: pynccl.py  pynccl_wrapper.py
phyai/src/phyai/runtime/: __init__.py  cuda_graph_manager.py
phyai/src/phyai/utils/: __init__.py  humming.py  logging.py
phyai/tests/layers/attention/: test_attention.py
scripts/: install_clang.sh  install_mirage.sh
(+38 files in other folders)
