[project]
name = "phyai-model-optimizer"
version = "0.1.0"
description = "phyai — Model optimization library."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phyai_model_optimizer"]
