[project]
name = "phyai-model-optimizer"
dynamic = ["version"]
description = "phyai model optimization library."
requires-python = ">=3.12"
dependencies = [
    "torch==2.11",
    "compressed-tensors>=0.17",
    "safetensors",
    "numpy",
]

# note(chenghua): phyai (calibration) and humming (pack_format="humming") are only
# needed for those code paths; keep them optional so data-free PTQ + compressed-tensors
# serialization stay usable standalone and CPU-only.
[project.optional-dependencies]
calibration = ["phyai", "accelerate"]
humming = ["humming-kernels[cu13]==0.1.10"]

[project.scripts]
phyai-optimize = "phyai_model_optimizer.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", fallback_version = "0.1.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/phyai_model_optimizer"]
